----------------------------

All:

- Add wxLZMA{Input,Output}Stream classes using external liblzma.
- Make wxList and wxVector iterators conform to input iterator requirements.
- Fix MT-safety problem when reading and writing from wxSocket (jkubalik).

All (GUI):

- Improve stock items consistency and aesthetics (dhowland).
- Fix bug with missing items in overflowing AUI toolbar (Maarten Bent).

wxGTK:

- Fix the build with glib < 2.32 (e.g. CentOS 6).

wxMSW:

- Fix hang after clearing wxTAB_TRAVERSAL style on a window with children.
- Fix handling of AUX2 mouse button events (Trylz).
- Fix saving/restoring window position for maximized windows.
- Fix stack corruption when using wxStackWalker (srfisk).
- Fix positioning windows at positions >= SHORT_MAX (Cătălin Răceanu).


3.1.1: (released 2018-02-19)
----------------------------

INCOMPATIBLE CHANGES SINCE 3.1.0:

- wxListCtrl::HasCheckboxes() and EnableCheckboxes(), which were added in
  3.1.0, have been renamed to HasCheckBoxes and EnableCheckBoxes respectively
  for consistency with wxCheckBox naming.

- The enum value wxTASKBAR_JUMP_LIST_DESTIONATION, which was added in 3.1.0,
  contains a typo and has been renamed to wxTASKBAR_JUMP_LIST_DESTINATION.
  
- wxZipOutputStream will now automatically convert filenames to UTF-8, if the
  wxMBConv used when calling the constructor supports UTF-8 encoding.


All:

- Add CMake-based build system (Tobias Taschner).
- Add wxSecretStore for storing passwords using the OS-provided facilities.
- Add support for compiling application code with wxNO_UNSAFE_WXSTRING_CONV.
- Add support for translating strings in different contexts (RickS).
- Add wxDateTime::GetFirstWeekDay() (Lauri Nurmi).
- Add support for the micro version (third component) to OS and toolkit version
  functions. See wxGetOsVersion(), wxPlatformInfo, and wxAppTraits.
- wxLogInfo() now logs messages if the log level is high enough, even without
  wxLog::SetVerbose() which now only affects wxLogVerbose().